# Spell

./: CMakeLists.txt  README.md
dic/: personal.dic
src/: dict_settings.cpp  dict_settings.h  dict_settings.hpp  dict_settings.ui  m_dict.cpp  m_dict.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
